syntax = "proto3";

option csharp_namespace = "LoginService_Grpc";
package LoginGRPC;

service LoginService {
  rpc LoginAD(LoginRequset) returns (LoginRepley) {}
}

message LoginRequset {
string username = 1;
string password = 2;
}

message LoginRepley {
	bool loginSucsefull = 1;
	bool Admin = 2;
}
